objects/MedProBT__ValueMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>MedProBT__MedPro_Column_Name__c</fullName>
        <label>MedPro Column Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__MedPro_Value__c</fullName>
        <label>MedPro Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__Other_Values__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProBT__SFDC_Value__c</fullName>
        <label>SFDC Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MedPro ValueMappings</label>
</CustomObject>